--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About TCSS</a></li>
-								<li><a href="#work">Oboard</a></li>
-								<li><a href="#about">FAQ's</a></li>
-								<li><a href="http://mypal.health" target="_blank">Movie Request</a></li>
+								<li><a href="#work">Oboard & FAQ</a></li>
+								<li><a href="http://requests.tcssplex.com:8084" target="_blank">Server Status</a></li>
+								<li><a href="http://requests.tcssplex.com" target="_blank">Movie Requests</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
