--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	TCSS
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>TCSS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +30,6 @@
 							<ul>
 								<li><a href="#intro">About TCSS</a></li>
 								<li><a href="#work">Oboard & FAQ</a></li>
-								<li><a href="http://requests.tcssplex.com:8084" target="_blank">Server Status</a></li>
 								<li><a href="http://requests.tcssplex.com" target="_blank">Movie Requests</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
