--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	TCSS
--->
 <html>
 	<head>
 		<title>TCSS</title>
@@ -9,16 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Add Font Awesome 5 CSS -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	</head>
 	<body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-ship"></span>
+							<span class="icon fas fa-ship"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
