--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>TCSS</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<!-- Add Font Awesome 5 CSS -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-	</head>
+		<head>
+		    <title>TCSS</title>
+		    <meta charset="utf-8" />
+		    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		    <link rel="stylesheet" href="assets/css/main.css" />
+		    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		    <!-- Updated Font Awesome 5.15.4 CSS -->
+		    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+		</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
