--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<p><b>So what is Plex anyway?</b><br>
 								You can think of Plex as a streaming service like Netflix or Amazon Prime Video that is operated by someone you know instead of a huge company. What this means is that they have complete control over what content is available, and can often obtain shows and movies that you're looking for.</p>
 								<p><b>Getting Started</b><br>
-									<a href="https://www.plxplainers.xyz/"><em>Visual Learner? Click here for a detailed guide on everything Plex.</em></a><br><br>
+									<a href="https://imgur.com/a/plexplainers-reupload-ZeyElPK"><em>Visual Learner? Click here for a detailed guide on everything Plex.</em></a><br><br>
 								If you're here, you were probably invited to join TCSS. The first step is to send me the email address you will use to create your free Plex account.
 
 							Shortly after you'll receive an email inviting you to join my server. Click the link in the email to accept the invitation and create your account at Plex.
