--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 								<li><a href="#intro">About TCSS</a></li>
 								<li><a href="#work">Oboard & FAQ</a></li>
 								<li><a href="http://requests.tcssplex.com" target="_blank">Movie Requests</a></li>
+								<li><a href="https://xyz.com" target="_blank">Watch History</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
